[package]
name = "era-file-sink"
version = "0.1.0"
edition = "2021"
default-run = "sink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sink"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
reqwest = "0.11"
tokio = { version = "1.27", features = ["time", "sync", "macros", "test-util", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.9", features = ["tls-roots"] }
prost = "0.11"
prost-types = "0.11"
thiserror = "1"
embed-file = "0.1.0"
hex = "0.4.3"
rlp = "0.5.2"
snap = "1.1.1"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
revm-primitives = "=1.1.2"
reth-rlp = { git = "https://github.com/paradigmxyz/reth", version = "=0.1.0-alpha.4", tag = "v0.1.0-alpha.4" }
bytes = "1.5.0"
decoder = { git = "https://github.com/semiotic-ai/flat-files-decoder.git"}
byteorder = "1.5.0"
serde = "1.0.196"

[profile.release]
debug = true
